setting timestamps on book entries switches to the appropriate filter an no longer jumps out of modal

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -759,7 +759,7 @@ select {
   width: 100px;
   color: black;
   text-align: center;
-  line-height: 12px;
+  line-height: 14px;
 }
 
 .m-stat li {
